project(VM)
cmake_minimum_required(VERSION 3.14)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

set(INSTRUCTIONS_DIR ${CMAKE_CURRENT_SOURCE_DIR}/Instructions)
set(FRAME_DIR ${CMAKE_CURRENT_SOURCE_DIR}/Frame)
set(INTERPRETATOR_DIR ${CMAKE_CURRENT_SOURCE_DIR}/Interpretator)
set(MAIN_DIR ${CMAKE_CURRENT_SOURCE_DIR}/main)

set(VM_SRC
${MAIN_DIR}/main.cpp
${INSTRUCTIONS_DIR}/instructions.cpp
)

set(VM_LIB_DIRS
${INSTRUCTIONS_DIR}
${FRAME_DIR}
${INSTRUCTIONS_DIR}
)

add_executable(vm ${VM_SRC})
target_include_directories(vm PRIVATE ${VM_LIB_DIRS})